Bug 150665 - Spacing issue with Malayalam Sign Virama (U+0D4D) in Writer
Summary: Spacing issue with Malayalam Sign Virama (U+0D4D) in Writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.5.0 inReleaseNotes:7.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Font-Rendering
  Show dependency treegraph
 
Reported: 2022-08-29 10:50 UTC by Ramesh Kunnappully
Modified: 2024-05-06 04:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (406.58 KB, image/jpeg)
2022-08-29 11:01 UTC, Ramesh Kunnappully
Details
Sample File (16.09 KB, application/vnd.oasis.opendocument.text)
2022-08-29 11:03 UTC, Ramesh Kunnappully
Details
Screenshot from 7.3.5.2 with correct spacing (1.74 MB, image/png)
2022-08-29 13:15 UTC, Khaled Hosny
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ramesh Kunnappully 2022-08-29 10:50:21 UTC
Description:
After updated to LO version 7.4.0.3, I can not able use the Manjari font (https://smc.org.in/fonts/manjari) in Writer. In a justified paragraph, wrong spacing appears before the glyph of Malayalam Sign Virama (U+0D4D).

Steps to Reproduce:
1.Install Libre Office Version: 7.4.0.3 (x64) in Windows 10/11
2.Install Manjari font from https://smc.org.in/fonts/manjari
3. Type കോഴിക്കോട് പാലക്കാട് കോഴിക്കോട് പാലക്കാട് കോഴിക്കോട് പാലക്കാട് കോഴിക്കോട് പാലക്കാട് in one paragprah
4. Apply Manjari font for the paragraph.
5. Apply justification format for the paragraph.

Actual Results:
When applying justification Unwanted spacing appears before the glyph of Malayalam Sign Virama (U+0D4D).

Expected Results:
Spacing between words only.


Reproducible: Always


User Profile Reset: No



Additional Info:
No Issue with Gayathri font available at https://smc.org.in/fonts/gayathri
Comment 1 Ramesh Kunnappully 2022-08-29 11:01:12 UTC
Created attachment 182071 [details]
Screenshot
Comment 2 Ramesh Kunnappully 2022-08-29 11:03:09 UTC
Created attachment 182072 [details]
Sample File
Comment 3 Khaled Hosny 2022-08-29 13:04:47 UTC
What was the previous LibreOffice version you upgraded from?
Comment 4 Ramesh Kunnappully 2022-08-29 13:10:07 UTC
Upgraded from LibreOffice 7.3.4
Comment 5 Khaled Hosny 2022-08-29 13:15:04 UTC
Created attachment 182076 [details]
Screenshot from 7.3.5.2 with correct spacing

I get correct spacing with 7.3.5.2 as well.
Comment 6 Commit Notification 2022-10-04 12:12:08 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/29de4d6e1afcf2ad79056e4ad4403c3d4bdda4a0

tdf#150665: Fix justifying spacing marks

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2022-10-04 13:51:28 UTC
For the record, this is a regression from

author	Mark Hung <marklm9@gmail.com>	2022-05-13 00:06:49 +0800
committer	Mark Hung <marklh9@gmail.com>	2022-05-18 14:32:06 +0200
commit f8560e09006cec5cc6ef26ccbf4f21aa28c22ac3 (patch)
tree 7efdff3730ba7f3797d2770b3da5f57baea2bd61
parent 343eed477ee7b55aa450bbc2aee6786dc0d9a071 (diff)
tdf#149017 fix space distribution in SwFntObj::DrawText()
Comment 8 Xisco Faulí 2022-10-05 07:56:50 UTC
Hi Khaled,
I found that your patch introduced a new regression in the same document.
I'll report it in a follow-up ticket
Comment 9 stragu 2022-12-07 16:24:47 UTC
Fix verified in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: da3dd48eaf9086f8ab28d6a6655f9a638e51433a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I assume a cherry-pick wasn't done for 7.4 because of the new regression?
Comment 10 Khaled Hosny 2022-12-07 17:02:37 UTC
(In reply to Stéphane Guillou (stragu) from comment #9)
> Fix verified in:
> 
> Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
> Build ID: da3dd48eaf9086f8ab28d6a6655f9a638e51433a
> CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
> Locale: en-AU (en_AU.UTF-8); UI: en-US
> Calc: threaded
> 
> I assume a cherry-pick wasn't done for 7.4 because of the new regression?

The involved code was changed quite a bit in 7.5 and I don’t think cherry-picking this particular commit alone would be enough.