vcl/inc/impglyphitem.hxx
@@ -34,7 +34,6 @@ enum class GlyphItemFlags : sal_uInt16
     NONE = 0,
     IS_IN_CLUSTER = 0x01,
     IS_RTL_GLYPH = 0x02,
-    IS_DIACRITIC = 0x04,
     IS_VERTICAL = 0x08,
     IS_SPACING = 0x10,
     IS_DROPPED = 0x40,
@@ -44,7 +43,7 @@ enum class GlyphItemFlags : sal_uInt16
 };
 namespace o3tl
 {
-template <> struct typed_flags<GlyphItemFlags> : is_typed_flags<GlyphItemFlags, 0x3df>
+template <> struct typed_flags<GlyphItemFlags> : is_typed_flags<GlyphItemFlags, 0x3db>
 {
 };
 };
@@ -78,7 +77,6 @@ public:
 
     bool IsInCluster() const { return bool(m_nFlags & GlyphItemFlags::IS_IN_CLUSTER); }
     bool IsRTLGlyph() const { return bool(m_nFlags & GlyphItemFlags::IS_RTL_GLYPH); }
-    bool IsDiacritic() const { return bool(m_nFlags & GlyphItemFlags::IS_DIACRITIC); }
     bool IsVertical() const { return bool(m_nFlags & GlyphItemFlags::IS_VERTICAL); }
     bool IsSpacing() const { return bool(m_nFlags & GlyphItemFlags::IS_SPACING); }
     bool IsDropped() const { return bool(m_nFlags & GlyphItemFlags::IS_DROPPED); }
